kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: robopizza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: robopizzaregistry.azurecr.io/api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: robopizza
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: api
